feat(charge-points-distribution): add UpdateChargePoint, update docs
